syntax = "proto3";

package raftpb;

option go_package = "github.com/therealutkarshpriyadarshi/keyval/proto;raftpb";

// RequestVote RPC
// Invoked by candidates to gather votes during leader election
message RequestVoteRequest {
  // Candidate's term
  uint64 term = 1;

  // Candidate requesting vote
  string candidate_id = 2;

  // Index of candidate's last log entry
  uint64 last_log_index = 3;

  // Term of candidate's last log entry
  uint64 last_log_term = 4;
}

message RequestVoteResponse {
  // Current term, for candidate to update itself
  uint64 term = 1;

  // True means candidate received vote
  bool vote_granted = 2;
}

// AppendEntries RPC
// Invoked by leader to replicate log entries and provide heartbeats
message AppendEntriesRequest {
  // Leader's term
  uint64 term = 1;

  // Leader ID, so follower can redirect clients
  string leader_id = 2;

  // Index of log entry immediately preceding new ones
  uint64 prev_log_index = 3;

  // Term of prev_log_index entry
  uint64 prev_log_term = 4;

  // Log entries to store (empty for heartbeat)
  repeated LogEntry entries = 5;

  // Leader's commit index
  uint64 leader_commit = 6;
}

message AppendEntriesResponse {
  // Current term, for leader to update itself
  uint64 term = 1;

  // True if follower contained entry matching prev_log_index and prev_log_term
  bool success = 2;

  // Optimization: index of conflicting entry (if any)
  uint64 conflict_index = 3;

  // Optimization: term of conflicting entry (if any)
  uint64 conflict_term = 4;
}

// InstallSnapshot RPC
// Invoked by leader to send snapshot chunks to followers that are too far behind
message InstallSnapshotRequest {
  // Leader's term
  uint64 term = 1;

  // Leader ID, so follower can redirect clients
  string leader_id = 2;

  // The snapshot replaces all entries up through and including this index
  uint64 last_included_index = 3;

  // Term of last_included_index
  uint64 last_included_term = 4;

  // Byte offset where chunk is positioned in the snapshot file
  uint64 offset = 5;

  // Raw bytes of the snapshot chunk, starting at offset
  bytes data = 6;

  // True if this is the last chunk
  bool done = 7;
}

message InstallSnapshotResponse {
  // Current term, for leader to update itself
  uint64 term = 1;
}

// LogEntry represents a single entry in the Raft log
message LogEntry {
  // Entry's term when it was received by the leader
  uint64 term = 1;

  // Entry index in the log
  uint64 index = 2;

  // Type of entry (Command, Configuration, NoOp)
  EntryType type = 3;

  // The command to be applied to the state machine
  bytes data = 4;
}

// EntryType defines the type of log entry
enum EntryType {
  ENTRY_TYPE_NORMAL = 0;      // Normal command
  ENTRY_TYPE_CONFIGURATION = 1; // Configuration change
  ENTRY_TYPE_NOOP = 2;         // No-op entry (used by leaders on election)
}

// Raft RPC service
service RaftService {
  // RequestVote is invoked by candidates to gather votes
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);

  // AppendEntries is invoked by leader to replicate log entries and send heartbeats
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);

  // InstallSnapshot is invoked by leader to send snapshots to followers
  rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}
